--- a/index.html
+++ b/index.html
@@ -1738,25 +1738,35 @@ async function getPosterDetails(tmdbId, contentType) {
     }
 }
 
-    async function fetchMoviesCatalog() {
-    try {
-        const response = await fetch('https://vixsrc.to/api/list/movie?lang=it');
-        if (!response.ok) throw new Error(`Errore HTTP: ${response.status}`);
-        return await response.json();
-    } catch (error) {
-        console.error('Errore nel recupero dei film:', error);
-        return [];
-    }
-}
+    // ✅ Definizione centralizzata della chiave TMDB
+const TMDB_API_KEY = '1e8c9083f94c62dd66fb2105cd7b613b';
+const TMDB_BASE_URL = 'https://api.themoviedb.org/3';
 
-async function fetchTVCatalog() {
+// 🔄 Funzione generica per ottenere i dettagli da TMDB
+async function fetchTMDBDetails(tmdbId, contentType) {
+    const cacheKey = `${contentType}-${tmdbId}`;
+    if (posterCache.has(cacheKey)) {
+        return posterCache.get(cacheKey);
+    }
+
     try {
-        const response = await fetch('https://vixsrc.to/api/list/tv?lang=it');
-        if (!response.ok) throw new Error(`Errore HTTP: ${response.status}`);
-        return await response.json();
+        // Gli episodi non hanno poster diretto, usiamo la serie TV
+        const type = contentType === 'episode' ? 'tv' : contentType;
+        const url = `${TMDB_BASE_URL}/${type}/${tmdbId}?api_key=${TMDB_API_KEY}&language=it-IT`;
+
+        const response = await fetch(url);
+        if (!response.ok) throw new Error(`TMDB fetch error: ${response.status}`);
+
+        const data = await response.json();
+        const posterPath = data.poster_path || null;
+
+        // Salva in cache
+        posterCache.set(cacheKey, posterPath);
+
+        return posterPath;
     } catch (error) {
-        console.error('Errore nel recupero delle serie TV:', error);
-        return [];
+        console.error(`Errore TMDB per ${tmdbId} (${contentType}):`, error);
+        return null;
     }
 }
 
